# cairo_tee

./: .gitignore  Cargo.toml  README.md
cairo/: Scarb.toml
cairo/src/: lib.cairo  p256.cairo  parse_crl.cairo  parse_x509.cairo  quote.cairo  signature_inputs.txt  tcb_signing_cert.json  tcb_signing_cert.txt  types.cairo  utils.cairo  verify.cairo
cairo/src/quote/: body.cairo
cairo/src/types/: cert.cairo  collaterals.cairo  enclave_identity.cairo  quotes.cairo  tcbinfo.cairo
cairo/src/types/quote/: body.cairo  header.cairo  version_4.cairo
cairo/src/types/quotes/: body.cairo  header.cairo  version_4.cairo
cairo/src/utils/: asn1_decode.cairo  byte.cairo  compare.cairo  enclave_identity.cairo  fmspc_tcb_parse.cairo  parse_x509.cairo  pck_parse.cairo  pem_decode.cairo  time_decode.cairo  x509_decode.cairo  x509crl_decode.cairo
cairo/src/verify/: cert.cairo  crypto.cairo  enclave_identity.cairo  quotes.cairo  tcbinfo.cairo  tdx_module.cairo
cairo/src/verify/quotes/: version_4.cairo
src/: lib.rs  parsed_inputs.rs  quote.rs  tcb_signing_cert.txt  utils.rs
