[package]
name = "rust_dcap"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
num-bigint = "0.4"
serde_json = "1.0"
dcap-rs = { path = "../dcap-rs" }
x509-parser = { version = "0.15.1" }
time = { version = "0.3.7", features = ["formatting"] }
nested_struct_bytes = { path = "./nested_struct_bytes" }
starknet-types-core = { version = "0.1.0", features = [
    "hash",
    "prime-bigint",
    "serde",
] }